# src/models/products.js
@@ -1,13 +1,16 @@
 const mongoose = require('mongoose');
 
-const productSchema = new mongoose.Schema({
-  name: { type: String, required: true },
-  price: { type: Number, required: true },
-  category: { type: String, required: true },
-  brand: { type: String, required: true },
-  stock: { type: Number, required: true },
-  description: { type: String, required: true },
-  rating: { type: Number }
-});
+const productSchema = new mongoose.Schema(
+  {
+    name: { type: String, required: true },
+    price: { type: Number, required: true },
+    category: { type: String, required: true },
+    brand: { type: String, required: true },
+    stock: { type: Number, required: true },
+    description: { type: String, required: true },
+    rating: { type: Number, default: 0 }
+  },
+  { timestamps: true }
+);
 
 module.exports = mongoose.model('Product', productSchema);
